UPDATES to video uploader /api/v1/articles/video-upload
